@@ -30,7 +30,7 @@
 
 <!-- Runtime -->
 <!ENTITY dconf-version                     "0.26.0">
-<!ENTITY dconf-editor-version              "3.20.0">
+<!ENTITY dconf-editor-version              "3.20.1">
 <!ENTITY adwaita-icon-theme-version        "3.20">
 <!ENTITY gnome-icon-theme-version          "3.12.0">
 <!ENTITY gnome-icon-theme-extras-version   "3.12.0">
