@@ -15,7 +15,7 @@
 <!-- DConf-Editor -->
   <!ENTITY dconf-editor-download-http "&gnome-download-http;/dconf-editor/&gnome-minor-20;/dconf-editor-&dconf-editor-version;.tar.xz">
   <!ENTITY dconf-editor-download-ftp  "&gnome-download-ftp;/dconf-editor/&gnome-minor-20;/dconf-editor-&dconf-editor-version;.tar.xz">
-  <!ENTITY dconf-editor-md5sum        "baa91b9ec5011e30c0dbd1d94648b39a">
+  <!ENTITY dconf-editor-md5sum        "00e205f1ba87a1d1a99b7cdbc2bd518b">
   <!ENTITY dconf-editor-size          "332 KB">
   <!ENTITY dconf-editor-buildsize     "7.3 MB">
   <!ENTITY dconf-editor-time          "less than 0.1 SBU">
