@@ -48,6 +48,26 @@
       <para>April 15th, 2016</para>
       <itemizedlist>
         <listitem>
+          <para>[bdubbs] - Add Update to webkitgtk-2.12.1. Fixes
+          <ulink url="&blfs-ticket-root;7730">#7730</ulink>.</para>
+        </listitem>
+        <listitem>
+          <para>[bdubbs] - Add smartmontools-6.4. Fixes
+          <ulink url="&blfs-ticket-root;7441">#7441</ulink>.</para>
+        </listitem>
+        <listitem>
+          <para>[bdubbs] - Update to dconf-editor-3.20.1. Fixes
+          <ulink url="&blfs-ticket-root;7729">#7729</ulink>.</para>
+        </listitem>
+        <listitem>
+          <para>[bdubbs] - Update to gtkmm-3.20.1. Partially fixes
+          <ulink url="&blfs-ticket-root;7729">#7729</ulink>.</para>
+        </listitem>
+        <listitem>
+          <para>[bdubbs] - Update to Berkeley db-6.2.23. Fixes
+          <ulink url="&blfs-ticket-root;7728">#7728</ulink>.</para>
+        </listitem>
+        <listitem>
           <para>[bdubbs] - Update to p7zip_15.14.1. Fixes
           <ulink url="&blfs-ticket-root;7048">#7048</ulink>.</para>
         </listitem>
