@@ -7,10 +7,10 @@
   <!--  This is the 2.8.x and later version of webkit -->
   <!ENTITY webkitgtk-download-http "http://webkitgtk.org/releases/webkitgtk-&webkitgtk-version;.tar.xz">
   <!ENTITY webkitgtk-download-ftp  " ">
-  <!ENTITY webkitgtk-md5sum        "d233b5594c37a961308c230207d8b64f">
-  <!ENTITY webkitgtk-size          "11.1 MB">
+  <!ENTITY webkitgtk-md5sum        "adcbee440d81acfb1ead9ada91bd5e79">
+  <!ENTITY webkitgtk-size          "11.2ch  MB">
   <!ENTITY webkitgtk-buildsize     "924 MB (109 MB installed)">
-  <!ENTITY webkitgtk-time          "42 SBU (using parallelism=4, estimated 90+ SBU using 1 core)">
+  <!ENTITY webkitgtk-time          "38 SBU (using parallelism=4, estimated 90+ SBU using 1 core)">
 ]>
 
 <sect1 id="webkitgtk" xreflabel="WebKitGTK+-&webkitgtk-version;">
